RESOLVED FIXED292203
[macOS Debug]]: ASSERTION FAILED: !layer || !layer->hasAncestor(this) in imported/w3c/web-platform-tests/css/css-view-transitions/transition-in-hidden-page.html
https://bugs.webkit.org/show_bug.cgi?id=292203
Summary [macOS Debug]]: ASSERTION FAILED: !layer || !layer->hasAncestor(this) in impo...
Marta Darbinyan
Reported 2025-04-28 10:24:25 PDT
There is an assertion in imported/w3c/web-platform-tests/css/css-view-transitions/transition-in-hidden-page.html. It's reproducible in test runs in EWS. stderr: ASSERTION FAILED: !layer || !layer->hasAncestor(this) /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebCore/platform/graphics/GraphicsLayer.cpp(291) : void WebCore::GraphicsLayer::setParent(GraphicsLayer *) 1 0x36975e61c WebCore::GraphicsLayer::setParent(WebCore::GraphicsLayer*) 2 0x36975eb64 WebCore::GraphicsLayer::addChild(WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>&&) 3 0x3698ac4bc WebCore::GraphicsLayerCA::addChild(WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>&&) 4 0x36975e988 WebCore::GraphicsLayer::setChildren(WTF::Vector<WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 5 0x3698ac45c WebCore::GraphicsLayerCA::setChildren(WTF::Vector<WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 6 0x36a03d358 WebCore::RenderLayerCompositor::updateBackingAndHierarchy(WebCore::RenderLayer&, WTF::Vector<WTF::Ref<WebCore::GraphicsLayer, WTF::RawPtrTraits<WebCore::GraphicsLayer>, WTF::DefaultRefDerefTraits<WebCore::GraphicsLayer>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WebCore::RenderLayerCompositor::UpdateBackingTraversalState&, WebCore::ScrollingTreeState&, WTF::OptionSet<WebCore::RenderLayerCompositor::UpdateLevel>) 7 0x36a039bc4 WebCore::RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer*) 8 0x36a03725c WebCore::RenderLayerCompositor::updateCompositingLayersTimerFired() 9 0x36a088c14 WebCore::Timer::Timer<WebCore::RenderLayerCompositor, WebCore::RenderLayerCompositor>(WebCore::RenderLayerCompositor&, void (WebCore::RenderLayerCompositor::*)())::'lambda'()::operator()() const 10 0x36a088b5c WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebCore::RenderLayerCompositor, WebCore::RenderLayerCompositor>(WebCore::RenderLayerCompositor&, void (WebCore::RenderLayerCompositor::*)())::'lambda'(), void>::call() 11 0x3632d0684 WTF::Function<void ()>::operator()() const 12 0x363422700 WebCore::Timer::fired() 13 0x3694e84d4 WebCore::ThreadTimers::sharedTimerFiredInternal() 14 0x3694f23fc WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 15 0x3694f23a8 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 16 0x3632d0684 WTF::Function<void ()>::operator()() const 17 0x36948eee4 WebCore::MainThreadSharedTimer::fired() 18 0x3695f7ad8 WebCore::timerFired(__CFRunLoopTimer*, void*) 19 0x18d36d598 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 20 0x18d36d23c __CFRunLoopDoTimer 21 0x18d36cd74 __CFRunLoopDoTimers 22 0x18d3501ac __CFRunLoopRun 23 0x18d34f414 CFRunLoopRunSpecific 24 0x18e484868 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 25 0x18e4fe4a4 -[NSRunLoop(NSRunLoop) run] 26 0x18cf89468 _xpc_objc_main 27 0x18cf98e58 _xpc_main 28 0x18cf89014 _xpc_copy_xpcservice_dictionary 29 0x143c53138 WebKit::XPCServiceMain(int, char const**) 30 0x146a65dd4 WKXPCServiceMain 31 0x102e57f90 main com.apple.WebKit.WebContent.Development terminated (pid 12283) for reason: crash LEAK: 1 WebPageProxy Test results: https://build.webkit.org/results/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/294180@main%20(6436)/results.html Test history: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Ftransition-in-hidden-page.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-28 10:24:48 PDT
EWS
Comment 2 2025-04-28 10:51:39 PDT
Test gardening commit 294199@main (3cbcb5325dc8): <https://commits.webkit.org/294199@main> Reviewed commits have been landed. Closing PR #44620 and removing active labels.
Matt Woodrow
Comment 3 2025-04-29 17:17:05 PDT
EWS
Comment 4 2025-04-29 23:14:37 PDT
Committed 294319@main (770818d2dcfa): <https://commits.webkit.org/294319@main> Reviewed commits have been landed. Closing PR #44720 and removing active labels.
EWS
Comment 5 2025-05-01 15:01:40 PDT
Test gardening commit 294397@main (0b469d6c46db): <https://commits.webkit.org/294397@main> Reviewed commits have been landed. Closing PR #44801 and removing active labels.
EWS
Comment 6 2025-05-12 12:09:38 PDT
Test gardening commit 289651.500@safari-7621-branch (e7f801b541b0): <https://commits.webkit.org/289651.500@safari-7621-branch> Reviewed commits have been landed. Closing PR #3079 and removing active labels.
EWS
Comment 7 2025-05-12 19:59:33 PDT
Committed 289651.505@safari-7621-branch (97ac2f1d3a7c): <https://commits.webkit.org/289651.505@safari-7621-branch> Reviewed commits have been landed. Closing PR #3088 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.